# ForecasticalCDK

./: .gitignore  README.md  clothing_recommender.py  cv_model.py  docker-compose.yml  forecast_update.py  init-database.sh  open-meteo-test.sh  recommender.py
backend/: .gitignore  .weather_cache.sqlite  Dockerfile  README.md  download_model.sh  flake.nix  gather.sh  go.mod  go.sum  gqlgen.yml  main.go  model_inference.py  pyproject.toml  requirements.txt  sentiment_model.py  server.go  server.go.bak  server.py  todo.md
backend/graph/: generated.go  schema.resolvers.go
backend/graph/models/: models_gen.go  weather.go
backend/lib/: model.py  orm.py  requirements.txt  weather_processor.py
backend/lib/ml/: activity_recommender.py  adv_img_discriminator.py  clothes.py  clothing_reccomender.py  clothing_recommender.py  cv_model.py  forecast_update.py  gen.py  model_inference.py  recommender.py  sentiment_model.py  synthetic_activities_data.csv  synthetic_tools_data.csv  tool_recommender.py
backend/lib/ml/model/: activities_model.pkl  clothing_model.pkl  tool_model.pkl
backend/migrations/: run_migrations.py
backend/migrations/sql/: 001_add_profile_fields.sql
backend/tools/: tools.go
cdk/: README.md  flake.nix  package-lock.json
frontend/: Dockerfile  README.md  devenv.nix  display_contents.sh  package-lock.json  package.json  vite.config.js
ml/: activity_gen.py  activity_recommender.py  adv_img_discriminator.py  clothing_recommender.py  recommender.py  server.py  synthetic_activities_data.csv  synthetic_tools_data.csv  tools_gen.py
sql/: init.sql
(+61 files in other folders)
