[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["trm109 <trm109@case.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.5"
matplotlib = "3.9.2"
numpy = "2.1.3"
pandas = "2.2.3"
peewee = "3.17.8"
pillow = "11.0.0"
pydantic = "2.9.2"
scikit-learn = "1.5.2"
timm = "1.0.11"
torch = "2.5.1"
torchvision = "0.20.1"
uvicorn = "0.32.0"
python-multipart = "0.0.17"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
